check pom not version 9